## Process this file with automake to produce Makefile.in
bin_PROGRAMS = ddtype

ddtype_SOURCES = \
				 main.cc \
				 controller/type_controller.hpp \
				 controller/type_controller.cpp \
				 model/schema.hpp \
				 model/schema.cpp \
				 model/schema_manager.hpp \
				 model/schema_manager.cpp \
				 model/unit_data_item.hpp \
				 model/unit_data_item.cpp \
				 model/unit_log_item.hpp \
				 model/unit_log_item.cpp \
				 view/window_manager.hpp \
				 view/window_manager.cpp \
				 view/main_window.hpp \
				 view/main_window.cpp \
				 view/type_interface.hpp \
				 view/type_interface.cpp \
				 view/practise_window.hpp \
				 view/practise_window.cpp \
				 view/test_window.hpp \
				 view/test_window.cpp 
