## Process this file with automake to produce Makefile.in
zmdir = $(schemadatadir)/zhengma

nobase_dist_zm_DATA = \
					  zigen/bihua/data.xml \
					  zigen/zhugenyi/data.xml \
					  zigen/zhugener/data.xml \
					  zigen/fugen/data.xml \
					  danzi/yigenzi/data.xml \
					  danzi/ergenzi/data.xml \
					  danzi/sangenzi/data.xml \
					  danzi/sigenzi/data.xml \
					  danzi/duogenzi/data.xml \
					  ciyu/erzici/data.xml \
					  ciyu/sanzici/data.xml \
					  ciyu/duozici/data.xml \
					  jianmazi/yijianzi/data.xml \
					  jianmazi/erjianzi/data.xml \
					  jianmazi/sanjianzi/data.xml \
					  jianmaci/erjianci/data.xml \
					  jianmaci/sanjianci/data.xml

uninstall-local:
	-rm -r $(zmdir)
