## Process this file with automake to produce Makefile.in
zmdir = $(schemadatadir)/zhengma

nobase_dist_zm_DATA = \
					  info.xml \
					  ciyu/info.xml \
					  ciyu/duozici/data.xml \
					  ciyu/duozici/info.xml \
					  ciyu/erzici/data.xml \
					  ciyu/erzici/info.xml \
					  ciyu/sanzici/data.xml \
					  ciyu/sanzici/info.xml \
					  \
					  danzi/info.xml \
					  danzi/duogenzi/data.xml \
					  danzi/duogenzi/info.xml \
					  danzi/ergenzi/data.xml \
					  danzi/ergenzi/info.xml \
					  danzi/sangenzi/data.xml \
					  danzi/sangenzi/info.xml \
					  danzi/sigenzi/data.xml \
					  danzi/sigenzi/info.xml \
					  danzi/yigenzi/data.xml \
					  danzi/yigenzi/info.xml \
					  \
					  gaopinzici/info.xml \
					  gaopinzici/gaopinci/data.xml \
					  gaopinzici/gaopinci/info.xml \
					  gaopinzici/gaopinzi/data.xml \
					  gaopinzici/gaopinzi/info.xml \
					  \
					  jianmaci/info.xml \
					  jianmaci/erjianci/data.xml \
					  jianmaci/erjianci/info.xml \
					  jianmaci/sanjianci/data.xml \
					  jianmaci/sanjianci/info.xml \
					  \
					  jianmazi/info.xml \
					  jianmazi/erjianzi/data.xml \
					  jianmazi/erjianzi/info.xml \
					  jianmazi/sanjianzi/data.xml \
					  jianmazi/sanjianzi/info.xml \
					  jianmazi/yijianzi/data.xml \
					  jianmazi/yijianzi/info.xml \
					  \
					  zigen/info.xml \
					  zigen/bihua/data.xml \
					  zigen/bihua/info.xml \
					  zigen/fugen/data.xml \
					  zigen/fugen/info.xml \
					  zigen/zhugener/data.xml \
					  zigen/zhugener/info.xml \
					  zigen/zhugenyi/data.xml \
					  zigen/zhugenyi/info.xml 

uninstall-local:
	-rm -r $(zmdir)
